menambahkan back end login

--- a/daftarakun.html
+++ b/daftarakun.html
@@ -140,7 +140,7 @@ p {
               <!-- Opsi Pendaftaran Akun -->
               <div class="options-container">
                 <!-- Opsi Mengajar -->
-                <div class="option" onclick="window.location.href='daftarakunguru.html'">
+                <div class="option" onclick="window.location.href='guru-daftarakun.php'">
                   <img src="assets/img/services.jpg" alt="Icon Mengajar">
                   <div class="text">
                     <h3>Mengajar</h3>
@@ -149,7 +149,7 @@ p {
                 </div>
   
                 <!-- Opsi Pengajar -->
-                <div class="option" onclick="window.location.href='pendaftaransis.html'">
+                <div class="option" onclick="window.location.href='siswa-daftarakun.html  '">
                   <img src="assets/img/services.jpg" alt="Icon Pengajar">
                   <div class="text">
                     <h3>Pelajar</h3>
