--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a href="#team">Guru</a></li>
             <li><a href="#testimoni">Testimoni</a></li>
             <li><a href="#footer">Kontak</a></li>        
-            <li><button type="submit" class="btn btn-primary" ><a href="login siswa.html">Masuk</a></button></li>
+            <li><button type="submit" class="btn btn-primary" ><a href="login.html">Masuk</a></button></li>
             <li><button type="submit" class="btn btn-primary" ><a href="daftarakun.html">Daftar</a></button></li>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
           </ul>
