--- a/siswa-beranda.html
+++ b/siswa-beranda.html
@@ -47,14 +47,14 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="berandasis.html" class="active">Beranda<br></a></li>
-            <li><a href="gurusis.html">Guru</a></li>
+            <li><a href="siswa-guru.html">Guru</a></li>
             <li class="dropdown"><a href="#"><span>Kelas</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="jadwalsis.html">Kelas Aktif</a></li>
-                <li><a href="statuspendafsis.html">Status Pendaftaran</a></li>
+                <li><a href="siswa-jadwal.html">Kelas Aktif</a></li>
+                <li><a href="siswa-statuspendaftaran.html">Status Pendaftaran</a></li>
               </ul>
             </li>
-            <li><a href="profilsis.html">
+            <li><a href="siswa-profil.html">
                 <img src="assets/img/services.jpg" alt="User Profile" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
               </a></li>
           </ul>
