update back end kedua

--- a/guru-beranda.html
+++ b/guru-beranda.html
@@ -47,7 +47,7 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="berandaguru.html" class="active">Beranda<br></a></li>
-            <li><a href="guru_siswa.html">Siswa</a></li>
+            <li><a href="guru_siswa.php">Siswa</a></li>
             <li><a href="guru_pendaftaransiswa.html">Pendaftaran</a></li>
             <li><a href="guru_pembayaran.html">Pembayaran</a></li>
             <li><a href="guru_profillguru.html">
