--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
     main {
       margin-top: -50px;
     }
+
+    .icon-box .icon i {
+  font-size: 2rem; /* Adjust size if needed */
+  color: white; /* Sets the icon color to white */
+}
+
+.icon-box .title {
+  color: white; /* Ensures the title (h4) color is also white */
+  margin-top: 10px;
+}
+
+.container ul li {
+  text-align: justify;
+}
   </style>
 </head>
 
@@ -132,7 +146,7 @@
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3>Kami berkomitmen membantu dan meningkatkan prestasi siswa </h3>
-            <img src="assets/img/belajar1.jpeg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/img/belajar3.jpeg" class="img-fluid rounded-4 mb-4" alt="">
             <p>Kami adalah layanan les privat yang berkomitmen membantu siswa dari berbagai jenjang untuk mencapai potensi terbaik mereka dalam bidang akademik. Dengan tim pengajar berpengalaman, Cerdas Privat menawarkan metode belajar yang interaktif dan personal, sesuai dengan kebutuhan setiap siswa.</p>
             <p>Di Cerdas Privat, kami percaya bahwa setiap siswa memiliki cara belajar yang unik. Oleh karena itu, kami menghadirkan pendekatan yang fleksibel dan efektif, membantu siswa lebih mudah memahami materi yang sulit serta meraih prestasi akademik yang lebih baik. Baik itu mata pelajaran Matematika, Bahasa Inggris, hingga Fisika dan Kimia, kami siap mendampingi siswa untuk belajar dengan lebih menyenangkan dan hasil yang nyata.</p>
           </div>
