--- a/siswa-beranda.html
+++ b/siswa-beranda.html
@@ -35,7 +35,6 @@
 </head>
 
 <body class="index-page">
-
   <header id="header" class="header fixed-top">
     <div class="branding d-flex align-items-cente">
       <div class="container position-relative d-flex align-items-center justify-content-between">
@@ -46,15 +45,15 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="berandasis.html" class="active">Beranda<br></a></li>
-            <li><a href="siswa-guru.html">Guru</a></li>
+            <li><a href="siswa-beranda.html" class="active">Beranda<br></a></li>
+            <li><a href="siswa-guru.php">Guru</a></li>
             <li class="dropdown"><a href="#"><span>Kelas</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="siswa-jadwal.html">Kelas Aktif</a></li>
-                <li><a href="siswa-statuspendaftaran.html">Status Pendaftaran</a></li>
+                <li><a href="siswa-jadwal.php">Kelas Aktif</a></li>
+                <li><a href="siswa-statuspendaftaran.php">Status Pendaftaran</a></li>
               </ul>
             </li>
-            <li><a href="siswa-profil.html">
+            <li><a href="siswa-profil.php">
                 <img src="assets/img/services.jpg" alt="User Profile" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
               </a></li>
           </ul>
