--- a/admin-beranda.html
+++ b/admin-beranda.html
@@ -53,29 +53,27 @@
 
 <body class="index-page">
 
-  <header id="header" class="header fixed-top">
-    <div class="branding d-flex align-items-cente">
-      <div class="container position-relative d-flex align-items-center justify-content-between">
-        <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logoCP2.png" alt="" style="width: 40px; height: auto;">
-          <h3 class="sitename" style="font-weight: bold;">Cerdas Privat</h3> 
-        </a>
-
-        <nav id="navmenu" class="navmenu">
-          <ul>
-            <li><a href="berandaguru.html" class="active">Beranda<br></a></li>
-            <li><a href="guru_siswa.php">Siswa</a></li>
-            <li><a href="guru_pendaftaransiswa.html">Pendaftaran</a></li>
-            <li><a href="guru_pembayaran.html">Pembayaran</a></li>
-            <li><a href="guru_profillguru.html">
-              <img src="assets/img/rw2.jpg" alt="User Profile" class="rounded-circle" style="width: 30px; height: 30px; object-fit: cover;">
-            </a></li>
-          </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-        </nav>
-      </div>
-    </div>
-  </header>
+    <header id="header" class="header fixed-top">
+        <div class="branding d-flex align-items-center">
+          <div class="container position-relative d-flex align-items-center justify-content-between">
+            <a href="index.html" class="logo d-flex align-items-center">
+                <img src="assets/img/logoCP2.png" alt="" style="width: 40px; height: auto;">
+                <h1 class="sitename">Cerdas Privat</h1>
+              </a>
+    
+            <nav id="navmenu" class="navmenu">
+              <ul>
+                <li><a href="admin-beranda.html"class="active">Beranda<br></a></li>
+                <li><a href="admin_guru.php" >Guru</a></li>
+                <li><a href="admin_siswa.php">Siswa</a></li>
+                <li><a href="admin_pendaftaran.php">Pendaftaran</a></li>
+                <li><a href="admin_pembayaran.php">Pembayaran</a></li>
+              </ul>
+              <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+            </nav>
+          </div>
+        </div>
+      </header>
 
   <main class="main">
     <!-- Hero Section -->
