--- a/daftarakun.html
+++ b/daftarakun.html
@@ -149,7 +149,7 @@ p {
                 </div>
   
                 <!-- Opsi Pengajar -->
-                <div class="option" onclick="window.location.href='siswa-daftarakun.html  '">
+                <div class="option" onclick="window.location.href='siswa-daftarakun.php  '">
                   <img src="assets/img/services.jpg" alt="Icon Pengajar">
                   <div class="text">
                     <h3>Pelajar</h3>
