--- a/siswa-beranda.html
+++ b/siswa-beranda.html
@@ -53,13 +53,12 @@
 
 <body class="index-page">
   <header id="header" class="header fixed-top">
-    <div class="branding d-flex align-items-cente">
+    <div class="branding d-flex align-items-center">
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
           <img src="assets/img/logoCP2.png" alt="" style="width: 40px; height: auto;">
-          <h3 class="sitename" style="font-weight: bold;">Cerdas Privat</h3> 
+          <h1 class="sitename">Cerdas Privat</h1>
         </a>
-
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="siswa-beranda.html" class="active">Beranda<br></a></li>
